--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f76cb4">  <td>19/06/27 19:29:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ElementVisibilityTest.elementVisibility()[pri:0, instance:seleniumMethods.ElementVisibilityTest@6767c1fc]">elementVisibility</td> 
-  <td>main@117244645</td>   <td></td> </tr>
+<tr bgcolor="f76cb4">  <td>19/10/02 16:40:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokenLinks.setUp()[pri:0, instance:seleniumMethods.BrokenLinks@224edc67]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="f76cb4">  <td>19/10/02 16:40:40</td>   <td>8728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokenLinks.brokenLinkTest()[pri:0, instance:seleniumMethods.BrokenLinks@224edc67]">brokenLinkTest</td> 
+  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="f76cb4">  <td>19/10/02 16:41:39</td>   <td>67283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrokenLinks.cleanUp()[pri:0, instance:seleniumMethods.BrokenLinks@224edc67]">&lt;&lt;cleanUp</td> 
+<td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
 </table>
