--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">72,405</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">187,949</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">seleniumMethods.BrokenLinks</td><td><a href="#m0">brokenLinkTest</a></td><td rowspan="1">1570048840762</td><td rowspan="1">58552</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">dataProvideur.DataProvideurFreeCRM</td><td><a href="#m0">createNewContactFreeCRM</a></td><td rowspan="4">1590117064399</td><td rowspan="4">18451</td></tr><tr class="passedeven"><td><a href="#m1">createNewContactFreeCRM</a></td></tr><tr class="passedeven"><td><a href="#m2">createNewContactFreeCRM</a></td></tr><tr class="passedeven"><td><a href="#m3">createNewContactFreeCRM</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">seleniumMethods.BrokenLinks#brokenLinkTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">dataProvideur.DataProvideurFreeCRM#createNewContactFreeCRM</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>youcef</td><td>hargas</td><td>vertussa</td><td>Lead</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">dataProvideur.DataProvideurFreeCRM#createNewContactFreeCRM</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>nacer </td><td>zimu</td><td>amazon</td><td>Contact</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">dataProvideur.DataProvideurFreeCRM#createNewContactFreeCRM</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>samir</td><td>ait ourab</td><td>google</td><td>Lead</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">dataProvideur.DataProvideurFreeCRM#createNewContactFreeCRM</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th><th>Parameter #4</th></tr><tr class="param stripe"><td>ferhat</td><td>saadi</td><td>adp</td><td>Contact</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
