--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f76cb4">  <td>19/10/02 16:40:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokenLinks.brokenLinkTest()[pri:0, instance:seleniumMethods.BrokenLinks@224edc67]">brokenLinkTest</td> 
-  <td>main@1497973285</td>   <td></td> </tr>
-<tr bgcolor="f76cb4">  <td>19/10/02 16:41:39</td>   <td>58555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrokenLinks.cleanUp()[pri:0, instance:seleniumMethods.BrokenLinks@224edc67]">&lt;&lt;cleanUp</td> 
-<td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
-<tr bgcolor="f76cb4">  <td>19/10/02 16:40:32</td>   <td>-8728</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokenLinks.setUp()[pri:0, instance:seleniumMethods.BrokenLinks@224edc67]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1497973285</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:11:22</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:12:10</td>   <td>47497</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:13:12</td>   <td>110055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:14:02</td>   <td>159829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DataProvideurFreeCRM.closeUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&lt;&lt;closeUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:11:04</td>   <td>-18454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
+  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:11:41</td>   <td>18567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
+  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:12:31</td>   <td>69091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
+  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:13:29</td>   <td>126668</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DataProvideurFreeCRM.createNewContactFreeCRM(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:1, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">createNewContactFreeCRM</td> 
+  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:10:55</td>   <td>-26892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:11:23</td>   <td>759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:12:11</td>   <td>48255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
+<tr bgcolor="e9a889">  <td>20/05/21 23:13:13</td>   <td>110784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DataProvideurFreeCRM.setUp()[pri:0, instance:dataProvideur.DataProvideurFreeCRM@548e7350]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@2025864991</td>   <td></td> </tr>
 </table>
